fix white space + handling null sessionStorage

--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ h1 {
   padding: 0.25em 0.5em;
   box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
   width: fit-content;
-
 }
 
 #b1 {
@@ -82,7 +81,7 @@ h1 {
 
 .text-container {
   position: absolute;
-  height: 100%;
+  height: 90%;
   width: 30%;
   display: flex;
   flex-wrap: wrap;
